# go-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAWD.md  CONSTITUTION.md  Dockerfile  IDENTITY.md  Makefile  README.md  SECURITY.md  SOUL.md  TEE.md  go.md  go.mod  install.sh  program.md  six-laws.md  skills-lock.json  start.sh  strategy.md  three-laws.md  wrangler.toml
.gocache/: trim.txt
.gocache/00/: 00223d733c2b3e8e35452ecb3a2054ffee4cb747c99f2df75972c6a9aa03b515-a  0040e3b4618a71ffcc4ece115a4086c8e9790213564938871d1889205548e8f0-d  00d8067972d821c6cd680648fef8af47071c5515de4aa21e67b91d7287157b5e-a
.gocache/01/: 011cb14ca6ba0ca434fe5184b50ed2d01dbbd2f1d1707e1828199db664456b5d-a  0148029a17a319cd80fd51023b5956f68487798105c25d22094928fbd64273a0-a  0150abb15adf4d74d130f389572248bfa97c1931261e7faf43719432700deb6e-a  0184549bc365c1f1f715d58d70ae4bc8079cc382d2888c074ad190bc1ab72db9-a  01a264fc081a0062a397c7388bda121cf96058d6bbc3033826004f94aac2cced-a
.gocache/02/: 02062cb47419238d394a6e3ea3a968227be8521ee3ce2c0f4d806f8f8e1ffb57-a  (+7 more)
cloudflare/: README.md  install-worker.js
docs/: OPEN_SOURCE_RELEASE.md  ZERO.md
ooda/: README.md  clawd-decision.ts  loop.ts  package-lock.json  package.json  tsconfig.json
scripts/: launch.mjs  package-lock.json  package.json  upstash-box-bootstrap.mjs  upstash-box-server.mjs
ui/: index.html  package-lock.json  package.json
web/: Makefile
zk-primitives/: .gitignore  MANIFEST.json  README.md  zk.md
zk-primitives/programs/clawd-zk/: Cargo.toml
(+1312 files in other folders)
